<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/spacing_default_50_percent">

        <com.bendywalker.insulator.Card
            android:id="@+id/card_carbohydrate_factor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintText="@string/hint_grams"
            app:infoText="@string/info_carbohydrate_factor"
            app:labelText="@string/label_carbohydrate_factor"
            app:prefKey="@string/preference_carbohydrate_factor"/>

        <com.bendywalker.insulator.Card
            android:id="@+id/card_corrective_factor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintText="@string/hint_mmol"
            app:infoText="@string/info_corrective_factor"
            app:labelText="@string/label_corrective_factor"
            app:prefKey="@string/preference_corrective_factor"/>

        <com.bendywalker.insulator.Card
            android:id="@+id/card_desired_blood_glucose_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintText="@string/hint_mmol"
            app:infoText="@string/info_desired_blood_glucose_level"
            app:labelText="@string/label_desired_blood_glucose_level"
            app:prefKey="@string/preference_desired_blood_glucose_level"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_continue"
            style="@style/CardBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_continue"
                    style="@style/CardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:enabled="false"
                    android:text="@string/button_continue"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>