<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/section_icr_calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/section_icr_tdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_icr_tdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/label_weight"
                android:text="@string/label_tdd"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edittext_icr_tdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/entry_weight"
                android:gravity="center"
                android:hint="@string/hint_units"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true">

                <requestFocus />
            </EditText>
        </LinearLayout>

        <TextView
            android:id="@+id/info_tdd_icr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/info_tdd_icr"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button_calculate_icr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/button_calculate"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/line_horizontal_margin"
            android:layout_marginTop="@dimen/line_horizontal_margin"
            android:background="#000000" />

        <LinearLayout
            android:id="@+id/section_display_icr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_icr_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="75"
                android:gravity="left"
                android:text="@string/label_yourICRis"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textview_icr_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:gravity="center"
                android:text="@string/default_insulin"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/info_ratio_icr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/info_ratiox2c_icr"
            android:textStyle="italic" />
    </LinearLayout>

    <Button
        android:id="@+id/button_save_ratio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:text="@string/button_save_return"
        android:textStyle="bold" />
</LinearLayout>