<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/spacing_default_50_percent">

        <com.bendywalker.insulator.Card
            android:id="@+id/card_current_blood_glucose_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:hintText="@string/hint_mmol"
            custom:infoText="@string/info_current_blood_glucose_level"
            custom:labelText="@string/label_current_blood_glucose_level"/>

        <com.bendywalker.insulator.Card
            android:id="@+id/card_carbohydrates_in_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:hintText="@string/hint_grams"
            custom:infoText="@string/info_carbohydrates_in_meal"
            custom:labelText="@string/label_carbohydrates_in_meal"/>


        <android.support.v7.widget.CardView
            style="@style/CardBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title_suggested_dose"
                    style="@style/CardTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/label_suggested_dose"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_suggested_dose">

                    <TextView
                        android:id="@+id/suggested_dose"
                        style="@style/Base.TextAppearance.AppCompat.Display2"
                        android:layout_width="@dimen/card_entry_width"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/spacing_default_100_percent"
                        android:gravity="center"
                        android:maxLength="4"
                        android:text="00.0"
                        android:textColor="@color/card_text_dark"
                        android:textSize="50sp"/>

                    <RelativeLayout
                        android:id="@+id/suggested_dose_breakdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/suggested_dose">

                        <RelativeLayout
                            android:id="@+id/carbohydrate_dose_breakdown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/carbohydrate_dose_label"
                                style="@style/CardInfoText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:text="@string/label_carbohydrate_dose"/>

                            <TextView
                                android:id="@+id/carbohydrate_dose"
                                style="@style/CardInfoText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:text="0.0"/>
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/carbohydrate_dose_breakdown"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/corrective_dose_label"
                                style="@style/CardInfoText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:text="@string/label_corrective_dose"/>

                            <TextView
                                android:id="@+id/corrective_dose"
                                style="@style/CardInfoText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:text="0.0"/>
                        </RelativeLayout>
                    </RelativeLayout>
                </RelativeLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>